--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h3>Links</h3>
     <ul>
       <a href="CV.html"><strong>CV Page</strong></a>
-      <a href="hobbies.html"><strong>Hobbies</strong></a>
+      <a href="Hobbies.html"><strong>Hobbies</strong></a>
       <a href="contact.html"><strong>Contact me</strong></a>
     </ul>
   </body>
